--- a/index.html
+++ b/index.html
@@ -2,16 +2,57 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121687159-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121687159-1');
+</script>
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P4HWCD8');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Lato|Roboto|Nunito+Sans|Mukta+Malar|PT+Sans|Raleway" rel="stylesheet">
-    <title>Document</title>
+    <!--Title-->
+    <title>Diego Alvarado</title>
+    <!--Description-->
+    <meta name="Description" content = "Pagina personal de Diego Alvarado. Estrategia y Desarrollo de Negocio, Desarrollador Web.">
+    <meta name="keywords" content = "JS, Node, CSS, React, DevOps">
+    <meta name="author" content = "Diego Alvarado">
+    <!--Canonical-->
+    <link rel="canonical" href="https://diegoalvarado.net">
+    <!--Open Graph-->
+    <meta property="og:title" content="Diego Alvarado" />
+    <meta property="og:description" content="Pagina personal de Diego Alvarado. Estrategia y Desarrollo de Negocio, Desarrollador Web." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:url" content="http://www.diegoalvarado.net/index.html" />
+    <meta property="og:image" content="http://www.diegoalvarado.net/resources/Diego1.png" />
+    <!--Twitter Cards-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@diegoalvarado">
+    <meta name="twitter:creator" content="@diegoalvarado">
+    <meta name="twitter:title" content="Diego Alvarado">
+    <meta name="twitter:description" content="Pagina personal de Diego Alvarado. Estrategia y Desarrollo de Negocio, Desarrollador Web.">
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4HWCD8"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <nav class="navbar">
         <a href="#home" class="nav nportada active">Portada</a>
         <a href="#quienSoy" class="nav nquiensoy">Quien soy</a>
