--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section id="estudios">
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img src="https://lh3.googleusercontent.com/-dHS41UxTTrI/VUdp8fiU_eI/AAAAAAAAAaI/kxIFq8MSDyU/w530-h532-n/keepCodingOnline.jpg"
+                        <img alt="Logo de Keepcoding" src="https://lh3.googleusercontent.com/-dHS41UxTTrI/VUdp8fiU_eI/AAAAAAAAAaI/kxIFq8MSDyU/w530-h532-n/keepCodingOnline.jpg"
                             width="195" height="195">
                     </figure>
                     <div class="detalle">
@@ -104,7 +104,8 @@
                 </article>
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img src="http://venturenetworkmalaga.ie.edu/uploads/default_event_photo.jpg" width="195" height="195">
+                        <img alt="Logo del Instituto de Empresa" src="https://cdn.eventscase.com/ieevents.ie.edu/uploads/users/2/uploads/5a5dca2097632.png"
+                            width="195" height="195">
                     </figure>
                     <div class="detalle">
                         <div class="centro">Instituto de Empresa</div>
@@ -114,7 +115,7 @@
                 </article>
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img src="https://botw-pd.s3.amazonaws.com/styles/logo-thumbnail/s3/012016/logo_universidad_del_pacifico.png?itok=Ye8GZevE"
+                        <img alt="Logo de Universidad del Pacifico" src="https://botw-pd.s3.amazonaws.com/styles/logo-thumbnail/s3/012016/logo_universidad_del_pacifico.png?itok=Ye8GZevE"
                             width="195" height="195">
                     </figure>
                     <div class="detalle">
@@ -129,7 +130,8 @@
             <section id="experiencia">
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img src="http://www.moodiereport.com/images/World_Duty_Free_Group_logo_300.jpg" width="300" height="200">
+                        <img alt="Logo de World Duty Free Group" src="http://www.moodiereport.com/images/World_Duty_Free_Group_logo_300.jpg" width="300"
+                            height="200">
                     </figure>
                     <h1 class="centrotrab">World Duty Free Group</h1>
                     <h2 class="posicion">Gerente de Proyectos, Estrategia y Desarrollo Corporativo</h2>
@@ -145,7 +147,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img src="http://s3.amazonaws.com/foundum-com-uploads/organization_account_image_uploads/406/images/medium/Najeti_final.jpg?1313662594">
+                        <img alt="Logo de Najeti Capital" src="http://s3.amazonaws.com/foundum-com-uploads/organization_account_image_uploads/406/images/medium/Najeti_final.jpg?1313662594">
                     </figure>
                     <h1 class="centrotrab">Najeti SCR</h1>
                     <h2 class="posicion">Analista de Inversiones</h2>
@@ -160,7 +162,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img src="http://www.ey.com/ecimages/EY-logo-li.png">
+                        <img alt="Logo de Ernst & Young" src="http://www.ey.com/ecimages/EY-logo-li.png">
                     </figure>
                     <h1 class="centrotrab">Ernst & Young</h1>
                     <h2 class="posicion">Consultor</h2>
@@ -177,7 +179,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img src="resources/AI.png">
+                        <img alt="Logo de Finanzas Ambientales" src="resources/AI.png">
                     </figure>
                     <h1 class="centrotrab">Finanzas Ambientales</h1>
                     <h2 class="posicion">Analista</h2>
@@ -190,7 +192,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img src="http://www.generaccion.com/noticia/imagenes/grandes/169967-09_10_2012_08_16_39_98764444.jpg">
+                        <img src="http://www.generaccion.com/noticia/imagenes/grandes/169967-09_10_2012_08_16_39_98764444.jpg" alt="Logo de IBM">
                     </figure>
                     <h1 class="centrotrab">IBM del Perú</h1>
                     <h2 class="posicion">Becario</h2>
