--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
             <section id="estudios">
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img alt="Logo de Keepcoding" src="https://lh3.googleusercontent.com/-dHS41UxTTrI/VUdp8fiU_eI/AAAAAAAAAaI/kxIFq8MSDyU/w530-h532-n/keepCodingOnline.jpg"
-                            width="195" height="195">
+                        <img alt="Logo de Keepcoding" src="resources/kc.jpg" width="195" height="195">
                     </figure>
                     <div class="detalle">
                         <div class="centro">Keepcoding</div>
@@ -104,8 +103,7 @@
                 </article>
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img alt="Logo del Instituto de Empresa" src="https://cdn.eventscase.com/ieevents.ie.edu/uploads/users/2/uploads/5a5dca2097632.png"
-                            width="195" height="195">
+                        <img alt="Logo del Instituto de Empresa" src="resources/ie.jpg" width="195" height="195">
                     </figure>
                     <div class="detalle">
                         <div class="centro">Instituto de Empresa</div>
@@ -215,19 +213,19 @@
                 <article class="links">
                     <div class="red">
                         <figure class="logored">
-                            <img src="resources/email.png">
+                            <img alt="mail icon" src="resources/email.png">
                         </figure>
                         <a class="linka email" href="email:diego23k@gmail.com" style="text-decoration:none;">diego23k@gmail.com</a>
                     </div>
                     <div class="red">
                         <figure class="logored">
-                            <img src="resources/linkedin.png">
+                            <img alt="LinkedIn icon" src="resources/linkedin.png">
                         </figure>
                         <a class="linka linkedin" href="https://www.linkedin.com/in/daalvaradoc">https://www.linkedin.com/in/daalvaradoc</a>
                     </div>
                     <div class="red">
                         <figure class="logored">
-                            <img src="resources/github.png">
+                            <img alt="Github icon" src="resources/github.png">
                         </figure>
                         <a class="linka github" href="https://github.com/daalvarado">https://github.com/daalvarado</a>
                     </div>
