--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section id="estudios">
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img alt="Logo de Keepcoding" src="resources/kc.jpg" width="195" height="195">
+                        <img alt="Logo de Keepcoding" src="resources/kc_logo.jpg" width="195" height="195">
                     </figure>
                     <div class="detalle">
                         <div class="centro">Keepcoding</div>
@@ -103,7 +103,7 @@
                 </article>
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img alt="Logo del Instituto de Empresa" src="resources/ie.jpg" width="195" height="195">
+                        <img alt="Logo del Instituto de Empresa" src="resources/ie_logo.jpg" width="195" height="195">
                     </figure>
                     <div class="detalle">
                         <div class="centro">Instituto de Empresa</div>
@@ -113,8 +113,7 @@
                 </article>
                 <article class="estudio-cuadro">
                     <figure class="logo">
-                        <img alt="Logo de Universidad del Pacifico" src="https://botw-pd.s3.amazonaws.com/styles/logo-thumbnail/s3/012016/logo_universidad_del_pacifico.png?itok=Ye8GZevE"
-                            width="195" height="195">
+                        <img alt="Logo de Universidad del Pacifico" src="resources/up_logo.png" width="195" height="195">
                     </figure>
                     <div class="detalle">
                         <div class="centro">Universidad del Pacifico</div>
@@ -128,8 +127,7 @@
             <section id="experiencia">
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img alt="Logo de World Duty Free Group" src="http://www.moodiereport.com/images/World_Duty_Free_Group_logo_300.jpg" width="300"
-                            height="200">
+                        <img alt="Logo de World Duty Free Group" src="resources/wdfg_logo.jpg" width="300" height="200">
                     </figure>
                     <h1 class="centrotrab">World Duty Free Group</h1>
                     <h2 class="posicion">Gerente de Proyectos, Estrategia y Desarrollo Corporativo</h2>
@@ -145,7 +143,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img alt="Logo de Najeti Capital" src="http://s3.amazonaws.com/foundum-com-uploads/organization_account_image_uploads/406/images/medium/Najeti_final.jpg?1313662594">
+                        <img alt="Logo de Najeti Capital" src="resources/najeti_logo.jpg">
                     </figure>
                     <h1 class="centrotrab">Najeti SCR</h1>
                     <h2 class="posicion">Analista de Inversiones</h2>
@@ -160,7 +158,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img alt="Logo de Ernst & Young" src="http://www.ey.com/ecimages/EY-logo-li.png">
+                        <img alt="Logo de Ernst & Young" src="resources/ey_logo">
                     </figure>
                     <h1 class="centrotrab">Ernst & Young</h1>
                     <h2 class="posicion">Consultor</h2>
@@ -177,7 +175,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img alt="Logo de Finanzas Ambientales" src="resources/AI.png">
+                        <img alt="Logo de Finanzas Ambientales" src="resources/ai_logo.png">
                     </figure>
                     <h1 class="centrotrab">Finanzas Ambientales</h1>
                     <h2 class="posicion">Analista</h2>
@@ -190,7 +188,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img src="http://www.generaccion.com/noticia/imagenes/grandes/169967-09_10_2012_08_16_39_98764444.jpg" alt="Logo de IBM">
+                        <img src="resources/ibm_logo.jpg" alt="Logo de IBM">
                     </figure>
                     <h1 class="centrotrab">IBM del Perú</h1>
                     <h2 class="posicion">Becario</h2>
@@ -213,19 +211,19 @@
                 <article class="links">
                     <div class="red">
                         <figure class="logored">
-                            <img alt="mail icon" src="resources/email.png">
+                            <img alt="mail icon" src="resources/email_icon.png">
                         </figure>
                         <a class="linka email" href="email:diego23k@gmail.com" style="text-decoration:none;">diego23k@gmail.com</a>
                     </div>
                     <div class="red">
                         <figure class="logored">
-                            <img alt="LinkedIn icon" src="resources/linkedin.png">
+                            <img alt="LinkedIn icon" src="resources/linkedin_icon.png">
                         </figure>
                         <a class="linka linkedin" href="https://www.linkedin.com/in/daalvaradoc">https://www.linkedin.com/in/daalvaradoc</a>
                     </div>
                     <div class="red">
                         <figure class="logored">
-                            <img alt="Github icon" src="resources/github.png">
+                            <img alt="Github icon" src="resources/github_icon.png">
                         </figure>
                         <a class="linka github" href="https://github.com/daalvarado">https://github.com/daalvarado</a>
                     </div>
