--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </article>
                 <article class="exp-cuadro">
                     <figure class="logoexp">
-                        <img alt="Logo de Ernst & Young" src="resources/ey_logo">
+                        <img alt="Logo de Ernst & Young" src="resources/ey_logo.png">
                     </figure>
                     <h1 class="centrotrab">Ernst & Young</h1>
                     <h2 class="posicion">Consultor</h2>
