--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
         <main>
             <section id="quienSoy">
+
                 <figure class="fotoDiego">
                     <img class="fotodiego" alt="Foto de Diego Alvarado" src="resources/Diego1.png">
                     <img class="fotodiego imgHidden" alt="Foto de Diego Alvarado" src="resources/Diego2.png">
@@ -88,6 +89,7 @@
                         <li class="item">Actualmente participo en el IV Web Bootcamp de Keepcoding</li>
                     </ul>
                 </article>
+                <h2 class="estudioTitulo">Quien Soy</h2>
             </section>
 
             <section id="estudios">
@@ -121,7 +123,7 @@
                         <div class="fechas">1999-2002</div>
                     </div>
                 </article>
-                <h1 class="estudioTitulo">Estudios</h1>
+                <h2 class="estudioTitulo">Estudios</h2>
             </section>
 
             <section id="experiencia">
@@ -129,9 +131,9 @@
                     <figure class="logoexp">
                         <img alt="Logo de World Duty Free Group" src="resources/wdfg_logo.jpg" width="300" height="200">
                     </figure>
-                    <h1 class="centrotrab">World Duty Free Group</h1>
-                    <h2 class="posicion">Gerente de Proyectos, Estrategia y Desarrollo Corporativo</h2>
-                    <h3 class="fechastrab">Mayo 2007-Sept 2015</h3>
+                    <h3 class="centrotrab">World Duty Free Group</h3>
+                    <h4 class="posicion">Gerente de Proyectos, Estrategia y Desarrollo Corporativo</h4>
+                    <h5 class="fechastrab">Mayo 2007-Sept 2015</h5>
                     <div class="descripcion">
                         <p>Análisis e identificación de oportunidades de expansión orgánicas e inorgánicas en el sector de Duty
                             Free, reportando a la Directora de Estrategia.</p>
@@ -145,9 +147,9 @@
                     <figure class="logoexp">
                         <img alt="Logo de Najeti Capital" src="resources/najeti_logo.jpg">
                     </figure>
-                    <h1 class="centrotrab">Najeti SCR</h1>
-                    <h2 class="posicion">Analista de Inversiones</h2>
-                    <h3 class="fechastrab">Marzo 2006-Marzo 2007</h3>
+                    <h3 class="centrotrab">Najeti SCR</h3>
+                    <h4 class="posicion">Analista de Inversiones</h4>
+                    <h5 class="fechastrab">Marzo 2006-Marzo 2007</h5>
                     <div class="descripcion">
                         <p>Análisis de proyectos de inversión, en especial en los sectores de Tecnología y Medicina.</p>
                         <p>Preparación de modelos financieros y valoraciones de empresa, tanto para proyectos nuevos como para
@@ -160,9 +162,9 @@
                     <figure class="logoexp">
                         <img alt="Logo de Ernst & Young" src="resources/ey_logo.png">
                     </figure>
-                    <h1 class="centrotrab">Ernst & Young</h1>
-                    <h2 class="posicion">Consultor</h2>
-                    <h3 class="fechastrab">Enero 2003-Sept 2004</h3>
+                    <h3 class="centrotrab">Ernst & Young</h3>
+                    <h4 class="posicion">Consultor</h4>
+                    <h5 class="fechastrab">Enero 2003-Sept 2004</h5>
                     <div class="descripcion">
                         <p>Análisis de riegos en gobierno corporativo y financieros bajo Sarbanes-Oxley. Llevé a cabo proyectos
                             relacionados con Sarbanes-Oxley en el banco más grande de Peru, en una de las principales empresas
@@ -177,9 +179,9 @@
                     <figure class="logoexp">
                         <img alt="Logo de Finanzas Ambientales" src="resources/ai_logo.png">
                     </figure>
-                    <h1 class="centrotrab">Finanzas Ambientales</h1>
-                    <h2 class="posicion">Analista</h2>
-                    <h3 class="fechastrab">Nov 2002-Ene 2003</h3>
+                    <h3 class="centrotrab">Finanzas Ambientales</h3>
+                    <h4 class="posicion">Analista</h4>
+                    <h5 class="fechastrab">Nov 2002-Ene 2003</h5>
                     <div class="descripcion">
                         <p>Preparación del plan de negocio para uno de los principales operadores turísticos en la amazonía
                             peruana.
@@ -190,16 +192,16 @@
                     <figure class="logoexp">
                         <img src="resources/ibm_logo.jpg" alt="Logo de IBM">
                     </figure>
-                    <h1 class="centrotrab">IBM del Perú</h1>
-                    <h2 class="posicion">Becario</h2>
-                    <h3 class="fechastrab">Ago 2001-Sep 2002</h3>
+                    <h3 class="centrotrab">IBM del Perú</h3>
+                    <h4 class="posicion">Becario</h4>
+                    <h5 class="fechastrab">Ago 2001-Sep 2002</h5>
                     <div class="descripcion">
                         <p>Soporte directo al Gerente de Operaciones y Marketing División Servidores para la region andina.</p>
                         <p>Análisis de operaciones de ventas en 6 paises. Análisis del pipeline y forecast de ventas.</p>
                         <p>Diseño y desarrollo de boletines de marketing usados por el equipo de ventas.</p>
                     </div>
                 </article>
-                <h1 class="expTitulo">Experiencia</h1>
+                <h2 class="expTitulo">Experiencia</h2>
             </section>
 
             <section id="sobreMi">
@@ -207,7 +209,7 @@
             </section>
 
             <section id="contacto">
-                <h1 class="conTitulo">Contacto</h1>
+                <h2 class="conTitulo">Contacto</h2>
                 <article class="links">
                     <div class="red">
                         <figure class="logored">
@@ -229,7 +231,7 @@
                     </div>
                 </article>
                 <article class="mensaje">
-                    <h1 class="dejame">Déjame un mensaje!</h1>
+                    <h3 class="dejame">Déjame un mensaje!</h3>
                     <form class="formulario" name="formulario" method="get" novalidate>
                         <div class="campo">Nombre:
                             <input type="text" id="firstName" required minlength="3" pattern=^[A-Za-z\s]{3,}$>
@@ -279,7 +281,7 @@
         </main>
 
         <footer class="footer">
-            Diego Alvarado - Actualizado Enero 2018
+            Diego Alvarado - Actualizado Junio 2018
         </footer>
     </div>
 
